cortex-m-rt/tests/compile-fail/exception-v8only.rs
#![no_main]
#![no_std]

extern crate cortex_m_rt;
extern crate panic_halt;

use cortex_m_rt::{entry, exception};

#[entry]
fn foo() -> ! {
    loop {}
}

#[exception]
fn SecureFault() {}
//~^ ERROR no variant or associated item named `SecureFault`
